gcc/testsuite/gdc.test/runnable/imports/inc11239.d
// REQUIRED_ARGS:
module imports.inc11239;

int foo(T)(T x)
{
    return 3;
}

debug
{
    int x = foo(2);
}
