gcc/testsuite/gdc.test/fail_compilation/imports/b18243.d
module imports.b18243;

bool isNaN(T)(T x) { return false; }
